syntax = "proto3";

option java_multiple_files = true;

package com.yuanchenxi95.model.api;

option java_package = "com.yuanchenxi95.protobuf.protobuf.api";
option java_outer_classname = "TwigApiErrorProto";

message TwigApiError {
    enum ErrorType {
        UNSPECIFIED = 0;
        UNKNOWN = 1;
        INTERNAL_SERVER_ERROR = 5;
        NOT_FOUND = 10;
        BAD_REQUEST = 15;
        AUTHENTICATION_ERROR = 20;
        NOT_IMPLEMENTED_ERROR = 25;
        OPERATION_FAILED_ERROR = 30;
    }

    uint32 code = 1;
    ErrorType error_type = 2;
    string message = 4;
}
